# CPP_CustomString

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark_results/: benchmark_results.txt
examples/: example.cpp
include/: c_string.h  mystring.h
src/: c_string.cpp  main.cpp  mystring.cpp  mystring.h
tests/: CMakeLists.txt  mystring_test.cpp
